# ViV1T

./: .gitignore  LICENSE  README.md  demo.ipynb  pyproject.toml  requirements.txt  train.py
data/: README.md
src/viv1t/: criterions.py  metrics.py  scheduler.py
src/viv1t/data/: __init__.py  constants.py  cycle_ds.py  data.py  statistics.py  utils.py
src/viv1t/model/: __init__.py  critic.py  helper.py  model.py  shifter.py
src/viv1t/model/core/: __init__.py  core.py  factorized_baseline.py  vivit.py
src/viv1t/model/modulators/: __init__.py  gru.py  mlp.py  mlp_v2.py  mlp_v3.py  modulator.py
src/viv1t/model/readout/: __init__.py  factorized.py  gaussian2d.py  random.py  readout.py
src/viv1t/utils/: bufferdict.py  estimate_batch_size.py  logger.py  utils.py  yaml.py
