[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "viv1t"
version = "0.0.1"
authors = [
  { name="Bryan M. Li", email="bryan.li@ed.ac.uk" },
]
description = "Codebase for the ViV1T solution to the Sensorium 2023 challenge."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = [
    "transformer",
    "neuro-ai",
    "sensorium2023",
    "visual-response-prediction",
    "sensorium",
]
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project.urls]
"Homepage" = "https://github.com/bryanlimy/viv1t"
"Bug Tracker" = "https://github.com/bryanlimy/viv1t/issues"
